# xingjiyun007

./: .env.example  .gitignore  App.tsx  DEPLOY.md  README.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  types.ts
backend/: .dockerignore  .env.example  Dockerfile  OPS.md  README.md  app.log.2026-01-22  app.log.2026-01-23  pyproject.toml  verify_route.py
backend/db/: schema.sql  travel_builder_backup_2026-01-26 (1).json
backend/scripts/: cleanup_app_data.py  import_backup_to_tables.py  init_db.py  init_db_data.py  inspect_app_data.py  manage_users.py  migrate_app_data.py  migrate_countries.py  migrate_public.py  migrate_to_relational.py  migrate_trips.py  set_admin.py  test_alias.py  test_api.py  verify_data.py
backend/src/app/: auth.py  config.py  db.py  deps.py  logging_config.py  main.py  models.py  schemas.py  schemas_resources.py  schemas_trips.py
backend/src/app/routers/: admin.py  admin_data.py  ai.py  auth.py  data.py  resources.py  trips.py
backend/src/app/services/: agent_service.py
backend/src/travel_builder_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: debug_db.py  reproduce_issue.py  test_bcrypt.py  test_data_isolation.py
components/: AdminDashboard.tsx  AuthModal.tsx  Autocomplete.tsx  GlobalSettings.tsx  MultiSelect.tsx  ResourceDatabase.tsx
deploy/: nginx.prod.conf
frontend/: .dockerignore  Dockerfile  OPS.md  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
services/: authService.ts  geminiService.ts  storageService.ts  (+1 more)
(+42 files in other folders)
